# ai-mesh-market

./: .env.example  .gitignore  Anchor.toml  README.md  docker-compose.soltoloka.yml  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts
api/: escora.mjs
api/orchestrator-proxy/: [...slug].js
api/soltoloka-proxy/: [...slug].js
docs/: API_CONTRACT.md  PITCH_OUTLINE.md
patches/: README.txt  soltoloka-backend-create-all-on-debug.patch
programs/: README.md
programs/data_arbiter/: Cargo.toml
programs/data_arbiter/src/: lib.rs
scripts/: check-demo-prereqs.mjs  depai-backend-migrate.sh  print-devnet-addresses.mjs  run-depai-backend.sh  setup-devnet-env.mjs
server/: .env.example  Dockerfile  README.md  package-lock.json  package.json  railway.toml
server/migrations/: 001_init.sql  002_platform_tasks.sql  003_drop_verbitto_offchain.sql  004_registered_agents.sql
server/scripts/: migrate.mjs  oracle-lm-worker.mjs
server/src/: agentRegistry.js  anchorIx.js  createApp.js  datasetsHub.js  db.js  dealsWs.js  heuristicJudge.js  index.js  lmStudioClient.js  oracle.mjs  oracleParse.mjs  oraclePrompt.mjs  oracleWorkerPool.js  platformTasks.js  solanaChain.js  verbitto.js  verbittoChain.js  walletVerify.js
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src/components/: AppHeader.tsx  AppLayout.tsx  AppSidebar.tsx  DatasetsSection.tsx  EscrowSection.tsx  FooterSection.tsx  HeroSection.tsx  MarketplaceSection.tsx  Navbar.tsx  RolesSection.tsx
streamlit/: agent_host_panel.py
streamlit-agent/: app.py
(+47 files in other folders)
