[package]
name = "data-arbiter"
version = "0.1.0"
description = "DataArbiter — autonomous AI-gated escrow for dataset trades on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "data_arbiter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.30.1"
