[package]
name = "data_arbiter"
version = "0.1.0"
description = "Escora / DataArbiter dataset escrow with permissionless ai_judge"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "data_arbiter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.30.1"
